--- a/donate/index.html
+++ b/donate/index.html
@@ -6,7 +6,7 @@
   
   <title itemprop="name">donate | らみと団子屋</title>
   
-    <link rel="shortcut icon" href="/img/favicon.ico">
+    <link rel="shortcut icon" href="/images/favicon.ico">
   
   <meta http-equiv="x-dns-prefetch-control" content="on">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+SerifMerriweather|Merriweather+Sans|Source+Code+Pro|Ubuntu:400,700|Noto+Serif+SC" media="all">
@@ -768,7 +768,7 @@ $(document).ready(function() {
 </style>
 <meting-js
 
-    id="22706980"
+    id="1439363395"
 
     server="netease"
 
