--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <title itemprop="name">らみと団子屋</title>
   
-    <link rel="shortcut icon" href="/img/favicon.ico">
+    <link rel="shortcut icon" href="/images/favicon.ico">
   
   <meta http-equiv="x-dns-prefetch-control" content="on">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+SerifMerriweather|Merriweather+Sans|Source+Code+Pro|Ubuntu:400,700|Noto+Serif+SC" media="all">
@@ -355,7 +355,7 @@
   <div class="notice" style="margin-top:60px">
     <i class="iconfont icon-notification">
     </i>
-    <div class="notice-content">网站建站中~最后更新于2021/02/08 22:52</div>
+    <div class="notice-content">网站建站中~最后更新于2021/02/09 17:14</div>
   </div>
   
   <div class="top-feature-row">
@@ -368,7 +368,7 @@
     <div class="the-feature square from_left_and_right">
       <a href="https://space.bilibili.com/32823052" target="_blank">
         <div class="img">
-          <img src="https://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.iohttps://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.io/img/dash-bili.png">
+          <img src="https://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.io/img/dash-bili.png">
         </div>
         <div class="info">
           <h3>Bilibili</h3>
@@ -382,7 +382,7 @@
     <div class="the-feature square from_left_and_right">
       <a href="https://bilibili.com/bangumi/play/ss1178" target="_blank">
         <div class="img">
-          <img src="https://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.iohttps://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.io/img/dash-CL.jpg">
+          <img src="https://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.io/img/dash-CL.jpg">
         </div>
         <div class="info">
           <h3>CLANNAD</h3>
@@ -396,7 +396,7 @@
     <div class="the-feature square from_left_and_right">
       <a href="https://twitter.com/KitamaruRamito" target="_blank">
         <div class="img">
-          <img src="https://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.iohttps://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.io/img/dash-Twitter.png">
+          <img src="https://cdn.jsdelivr.net/gh/kitamaruramito/kitamaruramito.github.io/img/dash-Twitter.png">
         </div>
         <div class="info">
           <h3>Twitter</h3>
@@ -780,7 +780,7 @@ $(document).ready(function() {
 </style>
 <meting-js
 
-    id="22706980"
+    id="1439363395"
 
     server="netease"
 
